--- a/package.json
+++ b/package.json
@@ -23,28 +23,43 @@
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
+    "async": "^2.6.2",
     "babel-loader": "^8.0.5",
+    "babel-preset-stage-0": "^6.24.1",
     "css-modules": "^0.3.0",
+    "eslint": "^5.16.0",
     "faker": "^4.1.0",
+    "prettier": "^1.17.0",
+    "readable-stream": "^3.3.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
   },
   "dependencies": {
     "acorn": "^6.1.1",
     "axios": "^0.18.0",
-    "bluebird": "^3.5.3",
+    "babel-polyfill": "^6.26.0",
+    "bluebird": "^3.5.4",
     "body-parser": "^1.18.3",
+    "chalk": "^2.4.2",
     "css-loader": "^2.1.1",
+    "csv-writer": "^1.2.0",
     "express": "^4.16.4",
+    "fast-csv": "^2.4.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
+    "mysql2": "^1.6.5",
+    "ndjson": "^1.5.0",
     "nodemon": "^1.18.10",
+    "pg": "^7.10.0",
+    "pg-promise": "^8.6.5",
     "react": "^16.8.6",
     "react-calendar": "^2.18.1",
     "react-dates": "^20.1.0",
     "react-dom": "^16.8.6",
     "react-with-direction": "^1.3.0",
-    "style-loader": "^0.23.1"
+    "sequelize": "^5.7.1",
+    "style-loader": "^0.23.1",
+    "through2": "^3.0.1"
   }
 }
