--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "csv-writer": "^1.2.0",
     "express": "^4.16.4",
     "fast-csv": "^2.4.1",
+    "file-loader": "^1.1.5",
     "moment": "^2.24.0",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
     "ndjson": "^1.5.0",
+    "newrelic": "^5.7.0",
     "nodemon": "^1.18.10",
     "pg": "^7.10.0",
     "pg-promise": "^8.6.5",
