--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "faker": "^4.1.0",
     "prettier": "^1.17.0",
     "readable-stream": "^3.3.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
     "acorn": "^6.1.1",
